--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,34 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    = yield
+    .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+      .container-fluid
+        .navbar-header
+          %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{:href => "#"} Project name
+        .navbar-collapse.collapse
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              %a{:href => "#"} Dashboard
+            %li
+              %a{:href => "#"} Settings
+            %li
+              %a{:href => "#"} Profile
+            %li
+              %a{:href => "#"} Help
+          %form.navbar-form.navbar-right
+            %input.form-control{:placeholder => "Search...", :type => "text"}/
+    .container-fluid
+      .row
+        .col-sm-3.col-md-2.sidebar
+          %ul.nav.nav-sidebar
+            %li.active
+              %a{:href => "#"} Profile
+            %li
+              %a{:href => "#"} Questions
+        .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
+          = yield
