random question posted

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{:href => "#"} FIBA referee quiz
+          %a.navbar-brand{:href => "/"} FIBA referee quiz
         .navbar-collapse.collapse
           %ul.nav.navbar-nav.navbar-right
             %li
@@ -32,8 +32,8 @@
         .col-sm-3.col-md-2.sidebar
           %ul.nav.nav-sidebar
             %li.active
-              %a{:href => "#"} Profile
+              %a{:href => "/"} Profile
             %li
-              %a{:href => "#"} Questions
+              %a{:href => "question/"} Questions
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
