--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,2 +1,3 @@
-%a.list-group-item{:href => "#"}
+=radio_button_tag :answer_id, answer.id
+=label_tag "answer_id_#{answer.id}", class: "list-group-item" do
   =answer.text
