--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,6 @@
             %li.active
               %a{:href => "/"} Profile
             %li
-              %a{:href => "question/"} Questions
+              %a{:href => "/question"} Questions
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
