--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,9 +34,9 @@
       .row
         .col-sm-3.col-md-2.sidebar
           %ul.nav.nav-sidebar
-            %li.active
+            %li{class: active?(root_path)}
               %a{:href => "/"} Profile
-            %li
-              %a{:href => "/question"} Questions
+            %li{class: active?(question_path)}
+              %a{:href => question_path} Questions
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
