--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,10 +35,10 @@
         .col-sm-3.col-md-2.sidebar
           %ul.nav.nav-sidebar
             %li{class: active?(root_path)}
-              %a{:href => "/"} Profile
+              =link_to "Home", root_path
             %li{class: active?(guide_path)}
               =link_to "Guide", guide_path
             %li{class: active?(question_path)}
-              %a{:href => question_path} Questions
+              =link_to "Question", question_path
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
