--- a/app/views/users/passwords/edit.html.haml
+++ b/app/views/users/passwords/edit.html.haml
@@ -1,14 +1,14 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  = f.hidden_field :reset_password_token
-  %div
-    = f.label :password, "New password"
-    %br/
-    = f.password_field :password, autofocus: true, autocomplete: "off"
-  %div
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  %div= f.submit "Change my password"
-= render "devise/shared/links"
+.row.main
+  .col-sm-6.col-md-5
+    %h2 Change your password
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }, class: "form-horizontal") do |f|
+      .form-group
+        = devise_error_messages!
+      = f.hidden_field :reset_password_token
+      .form-group
+        = f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "new password", class: "form-control"
+      .form-group
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "confirm new password", class: "form-control"
+      .form-group
+        = f.submit "Change my password", class: "btn btn-primary btn-block"
+    = render "devise/shared/links"
