--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -13,5 +13,5 @@
       .form-group
         = f.password_field :password_confirmation, autocomplete: "off", placeholder: "confirm password", class: "form-control"
       .form-group
-        = f.submit "Sign up", class: "btn btn-success btn-block"
+        = f.submit "Sign up", class: "btn btn-primary btn-block"
     = render "devise/shared/links"
