--- a/app/views/questions/random.html.haml
+++ b/app/views/questions/random.html.haml
@@ -1,4 +1,4 @@
-.row.main
+.row
   .col-sm-8.col-md-9
     =form_tag({controller: "questions", action: "check"},
       {class: "panel panel-primary", method: "post"}) do
