--- a/app/views/users/passwords/new.html.haml
+++ b/app/views/users/passwords/new.html.haml
@@ -1,4 +1,4 @@
-.row.main
+.row
   .col-sm-6.col-md-5
     %h2 Forgot your password?
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, class: "form-horizontal") do |f|
