--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,4 +1,4 @@
-.row.main
+.row
   .col-sm-6.col-md-5
     %h2 Sign up
     = form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-horizontal") do |f|
