remove start link if game started

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,8 @@
               =link_to "Home", root_path
             %li{class: active?(guide_path)}
               =link_to "Guide", guide_path
-            %li{class: active?(question_path)}
-              =link_to "Start!", question_path
+            - if not current_page? question_path
+              %li
+                =link_to "Start!", question_path
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
