added license and about

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,5 +41,7 @@
             - if not current_page? question_path
               %li
                 =link_to "Start!", question_path
+            %li{class: active?(about_path)}
+              =link_to "About", about_path
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
