random only gets random id, question shown by default action show

--- a/app/views/questions/explain.html.haml
+++ b/app/views/questions/explain.html.haml
@@ -15,4 +15,4 @@
     %p
       =@question.explanation
     %p
-      =link_to "next question", question_path, class: "btn btn-primary"
+      =link_to "next question", question_random_path, class: "btn btn-primary"
