--- a/app/views/static_pages/guide.html.haml
+++ b/app/views/static_pages/guide.html.haml
@@ -10,7 +10,7 @@
       Once you
       =link_to "log in", new_user_session_path
       you can 
-      =link_to "start answering questions.", question_path
+      =link_to "start answering questions.", question_random_path
       Simply click on the answer that you think is correct.
 
     %h2 My answer was right!
