--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,9 +38,9 @@
               =link_to "Home", root_path
             %li{class: active?(guide_path)}
               =link_to "Guide", guide_path
-            - if not current_page? question_path
+            - unless controller_name == "questions"
               %li
-                =link_to "Start!", question_path
+                =link_to "Start!", question_random_path
             %li{class: active?(about_path)}
               =link_to "About", about_path
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
