--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title FIBA rules quiz
+    %title The FIBA rules challenge
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
@@ -14,7 +14,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{:href => "/"} FIBA referee quiz
+          %a.navbar-brand{:href => "/"} The FIBA rules challenge
         .navbar-collapse.collapse
           %ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
