--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -2,6 +2,6 @@
   .col-sm-10.col-md-8
     %h1 About
     %p
-      This website is just a test project by
+      This website is just a weekend project by
       %a{href: "https://github.com/Enucatl/basketball-referee-quiz"} Matteo Abis
-      who happens to like coding and being a referee.
+      a referee who happens to like coding.
