upload and seed database rake tasks work

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -4,4 +4,5 @@
     %p
       This website is just a weekend project by
       %a{href: "https://github.com/Enucatl/basketball-referee-quiz"} Matteo Abis
-      a referee who happens to like coding.
+      a referee who happens to like coding. You can report wrong answers or bugs on the
+      %a{href: "https://github.com/Enucatl/basketball-referee-quiz/issues"} issue tracker.
