--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,14 +1,18 @@
 .row
   .col-sm-8.col-md-9
-    =form_tag({controller: "questions", action: "check"},
-      {class: "panel panel-primary", method: "post"}) do
-      =hidden_field_tag "time", 0
-      .panel-heading
-        %h3.panel-title
-          =@question.text
-          [<strong>#{@question.rating.to_i}</strong>]
-      .list-group
-        =render @answers
+    =form_tag({controller: "questions", action: "check"}, {method: "post"}) do
+      .panel.panel-primary
+        =hidden_field_tag "time", 0
+        .panel-heading
+          %h3.panel-title
+            =@question.text
+            [<strong>#{@question.rating.to_i}</strong>]
+        .list-group
+          =render @answers
+      .btn-group{data: {toggle: "buttons"}}
+        %label.btn.btn-primary
+          =check_box_tag "is_last_question"
+          This is my last question
 
   .col-sm-4.col-md-3
     .panel.panel-primary
@@ -36,13 +40,6 @@
             %td failed
             %td
               =@if_lose.to_i
-
-.row
-  .col-sm-8.col-md-9
-    .btn-group{data: {toggle: "buttons"}}
-      %label.btn.btn-primary
-        =check_box_tag "is_last_question"
-        This is my last question
 
 :coffee
   $ ->
